# atlas

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  quartz.config.ts  quartz.layout.ts
.github/workflows/: cpp-examples.yml  deploy.yml
components/: CatalogTree.tsx  DebugInfo.tsx  ExplorerFix.tsx  HomeCards.tsx  LeftTree.tsx  NavInit.tsx  SidebarGroups.tsx  SiteTitle.tsx  WordCount.tsx
content/: about.md  catalog.md  index.md
content/00-handbook/: index.md
content/10-fundamentals/: index.md
content/20-frameworks/: index.md
content/20-languages/: index.md
content/30-protocols-formats/: index.md
content/40-systems/: index.md
content/45-embedded-realtime/: index.md
content/50-infrastructure/: index.md
content/60-data-systems/: index.md
content/62-data-analytics/: index.md
content/65-reverse-engineering/: index.md
content/70-distributed-systems/: index.md
content/75-concurrency-parallelism/: index.md
content/80-architecture-design/: index.md
content/85-observability/: index.md
content/86-performance-capacity/: index.md
content/90-engineering-practices/: index.md
content/95-domains/: index.md
content/98-templates-snippets/: best-practices-template.md  cheatsheet-template.md  index.md  references-template.md  troubleshooting-template.md
content/99-scratch/: index.md
examples/rpc-coro/: CMakeLists.txt  README.md
examples/rpc-coro-proto/: CMakeLists.txt
examples/rpc-coro-proto/include/rpc/: envelope.hpp  io.hpp
examples/rpc-coro-proto/proto/: hello.proto
examples/rpc-coro-proto/src/: client.cpp  server.cpp
examples/rpc-coro/include/rpc/: client.hpp  envelope.hpp  io.hpp  router.hpp
examples/rpc-coro/src/: client.cpp  server.cpp
(+372 files in other folders)
